fix: decrease margin size to 0 for .single #content on mobile
Fixes the overlap for "previous" and "next" buttons.

Closes #4

--- a/aliem/styles/collections/content.styl
+++ b/aliem/styles/collections/content.styl
@@ -79,8 +79,11 @@
 
 // Better image alignment on mobile TODO: This looks strange. Might wanna test this
 @media (max-width: 800px)
+    .single #content
+        margin-top: 0
+
+    #main
+        padding-top: 0
     .post .post-content img
         float: none
         display: table-header-group
-    #main
-        padding-top: 0
